# Compiler

./: .gitignore  Readme.md  testfile1_79066012_陈劲安_优化前目标代码.txt  testfile1_79066012_陈劲安_优化后中间代码.txt  testfile1_79066012_陈劲安_优化后目标代码.txt  《编译技术》实验-2021.ppt  总结感想.md  申优文档.md
questions/: CourseGrading：程序设计 自动评分 自动评判 代码相似性 上机考试.html  CourseGrading：程序设计 自动评分 自动评判 代码相似性 上机考试B.html  CourseGrading：程序设计 自动评分 自动评判 代码相似性 上机考试C.html
questions/CourseGrading：程序设计 自动评分 自动评判 代码相似性 上机考试B_files/: ajax.js  showOJPProcessMsg.html  stayalive.html
questions/CourseGrading：程序设计 自动评分 自动评判 代码相似性 上机考试C_files/: cg_sv2.css  showOJPProcessMsg.html  sticky-footer-navbar.css
questions/CourseGrading：程序设计 自动评分 自动评判 代码相似性 上机考试_files/: 1635087407860009647.png:Zone.Identifier  URI.js.download:Zone.Identifier  ajax.js.download:Zone.Identifier  all.css:Zone.Identifier  analytics.js.download:Zone.Identifier  cg_sv2.css  (+33 more)
src/: .gitignore  Ast.cpp  Ast.h  CMakeLists.txt  ErrorHandling.cpp  ErrorHandling.h  GrammarAnalyzer.cpp  GrammarAnalyzer.h  LexicalAnalyzer.cpp  LexicalAnalyzer.h  Symbol.cpp  Symbol.h  Table.cpp  Table.h  Type.cpp  Type.h  main.cpp
src/FrontEnd/: GrammarAnalyzer.cpp  GrammarAnalyzer.h  LexicalAnalyzer.cpp  LexicalAnalyzer.h  Symbol.h  Table.cpp  Table.h  Type.cpp  Type.h
src/IR/: BasicBlock.cpp  BasicBlock.h  Context.cpp  Context.h  Instruction.cpp  Instruction.h  IntrusiveLinkedList.h  IrBuilder.cpp  IrBuilder.h  IrFunc.cpp  IrFunc.h  IrOptimizer.cpp  IrOptimizer.h  Module.cpp  Module.h  Variable.cpp  Variable.h
src/MIPS/: Generator.cpp  Generator.h  RegManager.cpp  RegManager.h
(+13 files in other folders)
